--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -47,8 +47,11 @@ executable aoc2024-exe
       aoc2024
     , base >=4.7 && <5
     , containers
+    , directory
+    , filepath
     , parsec
     , split
+    , text
   default-language: Haskell2010
 
 test-suite aoc2024-test
