--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -25,12 +25,15 @@ source-repository head
 
 library
   exposed-modules:
+      Day1
       Lib
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
+    , split
   default-language: Haskell2010
 
 executable aoc2024-exe
@@ -57,6 +60,7 @@ test-suite aoc2024-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Day1Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
@@ -69,4 +73,5 @@ test-suite aoc2024-test
     , base >=4.7 && <5
     , hspec
     , hspec-discover
+    , split
   default-language: Haskell2010
