--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Day1
       Day2
+      Day3
       Lib
   hs-source-dirs:
       src
@@ -63,6 +64,7 @@ test-suite aoc2024-test
   other-modules:
       Day1Spec
       Day2Spec
+      Day3Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
