--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -35,6 +35,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , parsec
     , split
   default-language: Haskell2010
 
@@ -77,5 +78,6 @@ test-suite aoc2024-test
     , base >=4.7 && <5
     , hspec
     , hspec-discover
+    , parsec
     , split
   default-language: Haskell2010
