--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -28,6 +28,7 @@ library
       Day1
       Day2
       Day3
+      Day4
       Lib
   hs-source-dirs:
       src
@@ -66,6 +67,7 @@ test-suite aoc2024-test
       Day1Spec
       Day2Spec
       Day3Spec
+      Day4Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
