--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -29,6 +29,7 @@ library
       Day2
       Day3
       Day4
+      Day5
       Lib
   hs-source-dirs:
       src
@@ -68,6 +69,7 @@ test-suite aoc2024-test
       Day2Spec
       Day3Spec
       Day4Spec
+      Day5Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
