--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -30,13 +30,16 @@ library
       Day3
       Day4
       Day5
+      Day6
       Lib
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
+    , mtl
     , parsec
     , split
   default-language: Haskell2010
@@ -70,6 +73,7 @@ test-suite aoc2024-test
       Day3Spec
       Day4Spec
       Day5Spec
+      Day6Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
