--- a/aoc2024.cabal
+++ b/aoc2024.cabal
@@ -31,6 +31,7 @@ library
       Day4
       Day5
       Day6
+      Day7
       Lib
   hs-source-dirs:
       src
@@ -74,6 +75,7 @@ test-suite aoc2024-test
       Day4Spec
       Day5Spec
       Day6Spec
+      Day7Spec
       Paths_aoc2024
   autogen-modules:
       Paths_aoc2024
